<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">دفتر الحسابات PRO MAX</string>
    <string name="home">الرئيسية</string>
    <string name="projects">المهام</string>
    <string name="charts">الرسم البياني</string>
    <string name="settings">الإعدادات</string>
    <string name="about">حول التطبيق</string>
    <string name="save">حفظ</string>
    <string name="cancel">إلغاء</string>
    <string name="delete">حذف</string>
</resources>
